# blas-tests

./: .gitignore  CMakeLists.txt  README.MD  blas_1.cc  blas_2.cc
includes/blislab/: README.MD  bl_config.h  bl_dgemm.h  bl_dgemm_kernel.h  bl_dgemm_simple.h  bl_dgemm_util.h
includes/blislab/kernels/: bl_dgemm_asm_12x4.cpp  bl_dgemm_asm_4x12.cpp  bl_dgemm_asm_6x8.cpp  bl_dgemm_asm_8x4.cpp  bl_dgemm_asm_8x6.cpp  bl_dgemm_int_8x4.cpp  bl_dgemm_ukr.cpp
latex/: document.bbl  document.tex
latex/code/: likwid-topology.txt
latex/data/v0/: caches  cycle-activity
latex/data/v0/CACHES/: 0.csv
latex/data/v0/CACHES/ranks/: .csv  Core 0.csv
latex/data/v0/CACHES/ranks-statistics/: min.csv
latex/data/v0/CACHES/regions-transpose/: size-1024-1024-1024-metric.csv  size-1280-1280-1280-metric.csv  size-1536-1536-1536-metric.csv  size-1792-1792-1792-metric.csv  (+16 more)
latex/data/v0/CUSTOM/: caches-bandwidth.csv  caches-cpi.csv  caches-datavolume.csv  caches-time.csv  cycle-activity-without.csv
latex/data/v0/CYCLE-ACTIVITY/: 0.csv
latex/data/v1/: caches  cycle-activity
latex/data/v1/.LIKWID-CACHES.SWP/: 1.csv
latex/data/v1/CACHES/: 0.csv
latex/data/v1/CUSTOM/: caches-bandwidth-sum.csv  caches-cpi.csv  caches-datavolume.csv  caches-time.csv  cycle-activity-without.csv
latex/data/v1/CYCLE-ACTIVITY/: 0.csv
latex/data/v2/: caches  cycle-activity
latex/data/v2/CACHES/: 0.csv
latex/data/v2/CUSTOM/: caches-bandwidth.csv  caches-cpi.csv  caches-datavolume.csv  caches-time.csv  cycle-activity-without.csv
latex/data/v2/CYCLE-ACTIVITY/: 0.csv
latex/figures/: algo-mem.pdf_tex  algo.pdf_tex  dot.pdf_tex  micro.pdf_tex  micro1.pdf_tex  micro2.pdf_tex  micro3.pdf_tex  micro4.pdf_tex  micro5.pdf_tex  tensor.pdf_tex  tiles.pdf_tex  tiles2.pdf_tex
script/: run.sh
src/: blas_3.cc
(+233 files in other folders)
